# pyasn1-fasder

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: CI.yml
python/pyasn1_fasder/: __init__.py  _native_helper.py  error.py
src/: asn1_type.rs  decoder.rs  lib.rs  tag.rs
tests/: __init__.py  test_basic.py  test_context_specific.py  test_universal_constructed.py  test_universal_primitive.py
