[package]
name = "pyasn1-fasder"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyasn1_fasder"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20.3", features = ["num-bigint"] }
der = { version = "0.7.8", features = ["oid"] }
num-bigint = "0.4.6"
itertools = "0.13.0"
