[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "pyasn1-fasder"
authors = [
    {name = "Corey Bonnell", email = "cbonnell@outlook.com" },
]
description = "A DER decoder for pyasn1 built to detect encoding errors"
license = "MIT"
readme = "README.md"
repository = "https://github.com/CBonnell/pyasn1-fasder"
requires-python = ">=3.8"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dynamic = ["version"]
dependencies = [
    "pyasn1",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "pyasn1_fasder._native"
